--- a/styles/full-week.css
+++ b/styles/full-week.css
@@ -1,11 +1,22 @@
+body{
+    text-align: center;
+    background-color: rgb(233, 215, 207);
+    margin: 50px;
+}
+
+
 h1{
+    font-family: 'Oswald', sans-serif;
     font-size: 48px;
     color: rgb(71, 62, 62);
     margin: 0px;
 }
 
+
 #description{
     margin-bottom: 12px;
+    font-family: 'Fira Sans',sans-serif;
+    color: rgb(83, 75, 75);
 }
 
 a{
