--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,16 +4,33 @@ body{
     margin: 50px;
 }
 
+main{
+    width: 800px;
+    margin: 200px auto 72px auto;
+    background-color: rgb(219, 108, 94);
+    padding: 24px;
+    border: 5px solid rgb(44, 44, 44);
+    border-radius: 8px;
+    box-shadow: 1px 2px 8px rgba(0, 0, 0, 0.3);
+}
+
 img{
     width: 200px;
     height: 200px;
     border-radius: 100px;
+    border: 5px solid rgb(44, 44, 44);
+    margin-top: -134px;
 }
 
 h1{
     font-family: 'Oswald', sans-serif;
-    color: rgb(83, 75, 75);
+    color: rgb(31, 25, 25);
+    font-size: 30px;
  
+}
+
+span{
+    color: rgb(66, 2, 2);
 }
 
 
@@ -24,7 +41,7 @@ p{
 }
 
 a{
-    color: rgb(167, 1, 78);
+    color: rgb(73, 29, 50);
     text-decoration: none;
 }
 
@@ -33,7 +50,7 @@ a:hover{
 }
 
 #unique-p{
-    color: rgb(170, 96, 83);
+    color: rgb(75, 59, 59);
     font-weight: bold;
     font-size: 52px;
 }
