--- a/travel project/styles/shared.css
+++ b/travel project/styles/shared.css
@@ -3,6 +3,12 @@ body{
     margin: 0;
 }
 
+ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
 #page-logo a{
     padding: 10px;
     font-family: 'Oleo Script', sans-serif;
