--- a/travel project/styles/shared.css
+++ b/travel project/styles/shared.css
@@ -7,6 +7,14 @@ ul{
     list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px 60px;
 }
 
 #page-logo a{
@@ -18,4 +26,12 @@ ul{
     text-transform: uppercase;
     text-shadow: 1px 1px 2px rgb(0, 0, 0);
 
+}
+
+header ul{
+    display: flex;
+}
+
+header li{
+    margin-left: 20px;
 }
