--- a/travel project/styles/shared.css
+++ b/travel project/styles/shared.css
@@ -15,6 +15,9 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 15px 60px;
+    position: absolute;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #page-logo a{
@@ -34,4 +37,41 @@ header ul{
 
 header li{
     margin-left: 20px;
+}
+
+header a{
+    color: rgb(255, 251, 0);
+    text-decoration: none;
+    font-size: 20px;
+    padding: 12px;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+}
+
+header a:hover{
+    color: rgb(77, 77, 77);
+    background-color: rgb(255, 251, 0);
+    
+}
+
+footer{
+    background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
+    padding: 36px;
+}
+
+footer ul{
+    display: flex;
+    justify-content: center;
+    /* padding: 40px; */
+}
+
+footer li{
+    width: 80px;
+    height: 80px;
+    margin: 0 50px;
+}
+
+footer img{
+    width: 100%;
+    height: 100%;
 }
