--- a/travel project/styles/styles.css
+++ b/travel project/styles/styles.css
@@ -1,12 +1,13 @@
 #hero{
     height: 800px;
-    background-image: url("/travel\ project/images/places/f.jpg");
+    background-image: url("/travel\ project/images/places/e.jpg");
     background-position: center;
     background-size: cover;
 }
 
 #hero-content{
     width: 900px;
+    height: 165px;
     background-color: rgba(51, 47, 47, 0.8);
     box-shadow: 2px 4px 8px rgb(68, 67, 67);
     border-radius: 8px;
