--- a/travel project/styles/styles.css
+++ b/travel project/styles/styles.css
@@ -1,6 +1,6 @@
 #hero{
     height: 800px;
-    background-image: url("/travel\ project/images/places/e.jpg");
+    background-image: url("/travel\ project/images/places/Robben-Island5.jpeg");
     background-position: center;
     background-size: cover;
 }
@@ -8,9 +8,9 @@
 #hero-content{
     width: 900px;
     height: 165px;
-    background-color: rgba(51, 47, 47, 0.8);
+    background-color: rgba(51, 47, 47, 0.6);
     box-shadow: 2px 4px 8px rgb(68, 67, 67);
-    border-radius: 8px;
+    border-radius: 30px;
     text-align: center;
     padding: 50px 0;
     margin: 0 auto;
