--- a/travel project/styles/places.css
+++ b/travel project/styles/places.css
@@ -9,20 +9,55 @@ header{
 main ul{
     width: 800px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 main li{
     display: flex;
     background-color: white;
+    box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
+    border-radius: 6px;
+    overflow: hidden;
+    
 }
 
 main li img{
     width: 300px;
     height: 280px;
+    object-fit: cover;
+}
+
+main li h2{
+    color: rgb(68, 68, 68);
+}
+
+main li p{
+    color: rgb(68, 68, 68);
 }
 
 .item-content{
     padding: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
 
+.actions{
+    text-align: right;
+}
 
+.actions a{
+    text-decoration: none;
+    padding: 6px;
+    color: rgb(22, 211, 228);
+    font-weight: bold;
+    border-radius: 5px;
+    
+}
+
+.actions a:hover{
+    background-color: rgb(235, 253, 255);
+    
 }
