--- a/travel project/cssgrid/stylescssgrid.css
+++ b/travel project/cssgrid/stylescssgrid.css
@@ -21,9 +21,12 @@ li{
     margin: 20px auto;
 }
 
+/* li:first-of-type{
+    background-color: yellow;
+} */
+
 li:nth-of-type(3){
     background-color: yellow;
-    grid-column: 1 / 2;
-
-
+    /* grid-column: 1 / 3; */
+    grid-column: 1 / span 2;
 }
